@@ -1,5 +1,10 @@
 2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* xs/ClutterActor.xs: Allow overriding the ClutterActor::paint()
+	vfunc in order to draw actor subclasses using native GL calls.
+
+2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* Makefile.PL: Fix inclusion of the autogenerated Keysyms
 	module.
 
